# ibus-anthy

./: meson.build  meson_options.txt
build-aux/meson/: gen_emoji_t.py
data/: meson.build  zipcode-textdic.py
engine/: meson.build
engine/python2/: meson.build
engine/python3/: meson.build
gir/: meson.build
icons/: meson.build
setup/python2/: meson.build
setup/python3/: meson.build
tests/: meson.build
